--- a/.github/workflows/update-extensions.yml
+++ b/.github/workflows/update-extensions.yml
@@ -6,6 +6,12 @@ name: Update Extensions Manifest
 # or API.
 on:
   workflow_dispatch:
+    inputs:
+      dry-run:
+        description: "Dry run?"
+        required: true
+        type: boolean
+        default: false  
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '45 8 * * *'
@@ -18,13 +24,16 @@ jobs:
     runs-on: ubuntu-latest  
     
     env:
-      PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      DRY_RUN: ${{ github.event.inputs.dry-run }}
       NEXUS_APIKEY: ${{ secrets.NEXUS_APIKEY }}
       SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
       
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - name: Show Inputs
+      run: echo "${{ toJSON(github.event.inputs) }}"
+
     - uses: actions/checkout@v3
       with:
         submodules: "recursive"
@@ -39,4 +48,4 @@ jobs:
       run: yarn install --frozen-lockfile
 
     - name: Run
-      run: yarn update-extensions
+      run: yarn update-extensions-manifest
