--- a/.github/workflows/update-extensions-manifest.yml
+++ b/.github/workflows/update-extensions-manifest.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest  
     
     env:
-      DRY_RUN: ${{ github.event.inputs.dry-run }}
+      DRY_RUN: ${{ inputs.dry-run }}
       NEXUS_APIKEY: ${{ secrets.NEXUS_APIKEY }}
       SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
@@ -32,7 +32,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: Show Inputs
-      run: echo "${{ toJSON(github.event.inputs) }}"
+      run: echo "${{ toJSON(inputs) }}"
 
     - uses: actions/checkout@v3
       with:
