--- a/.github/workflows/add-extension.yml
+++ b/.github/workflows/add-extension.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Add Game Extension
+name: Add Extension
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
