--- a/.github/workflows/update-extensions-manifest.yml
+++ b/.github/workflows/update-extensions-manifest.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest  
     
     env:
-      DRY_RUN: ${{ inputs.dry-run }}
+      DRY_RUN: ${{ !!(inputs.human) }}
       NEXUS_APIKEY: ${{ secrets.NEXUS_APIKEY }}
       SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
