--- a/.github/workflows/update-extensions-manifest.yml
+++ b/.github/workflows/update-extensions-manifest.yml
@@ -59,5 +59,6 @@ jobs:
       run: |
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
         git config --global user.email "${{ env.CI_COMMIT_EMAIL }}"
+        git pull
         git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
         git push
