--- a/.github/workflows/add-extension.yml
+++ b/.github/workflows/add-extension.yml
@@ -79,7 +79,7 @@ jobs:
   
       # commit and push if not dry run  
       - name: Git commit and push      
-        if: ${{ env.DRY_RUN == false }}
+        if: ${{ env.DRY_RUN == 'false' }}
         env: 
           CI_COMMIT_AUTHOR: Vortex Backend
           CI_COMMIT_EMAIL: insomnious@users.noreply.github.com
