--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typescript": "^5.1.3"
   },
   "name": "vortex-update-extensions",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "dependencies": {
     "@babel/parser": "^7.22.5",
@@ -63,6 +63,7 @@
     "node-7z": "github:Nexus-Mods/node-7z",
     "node-7z-archive": "^1.1.4",
     "normalize-path": "^3.0.0",
+    "octokit": "^3.2.0",
     "once": "^1.4.0",
     "path-is-absolute": "^1.0.1",
     "path-parse": "^1.0.7",
