--- a/.github/ISSUE_TEMPLATE/verify-extension.yaml
+++ b/.github/ISSUE_TEMPLATE/verify-extension.yaml
@@ -1,61 +1,74 @@
 name: Verify Extension
 description: Submit a game extension for verification
-title: "Verify Extension: "
+title: "[Verify]: Game Name"
 labels: ["extension :gear:"]
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thank you for taking the time to develop a game extension for Vortex! To submit your extension for verification and before one of our team can take a look, please fill in the form below. 
+        This form will provide you with details about the verification process, puts all the pertinent information in a single place and will give you the ability to track the submission journey. 
+
   - type: input
-    id: contact
+    id: extension-url
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
+      label: Extension URL
+      description: URL to the extension mod page on Nexus Mods that you uploaded
+      placeholder: ex. https://www.nexusmods.com/site/mods/634
+    validations:
+      required: true
+
+  - type: input
+    id: game-url
+    attributes:
+      label: Game URL
+      description: URL to the game section on Nexus Mods that contain the mods for this extension
+      placeholder: ex. https://www.nexusmods.com/starfield
+    validations:
+      required: true
+
+  - type: input
+    id: existing-extension-url
+    attributes:
+      label: Existing Extension URL
+      description: If there is an existing extension for this game, please let us know the URL
+      placeholder: ex. https://www.nexusmods.com/site/mods/634
     validations:
       required: false
+
   - type: textarea
-    id: what-happened
+    id: extension-features
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      label: New features
+      description:  If there is an existing extension for this game, your extension will need to be functionally better and\or have greater features than the existing one in order for us to verify it.   
+      placeholder: ex. Has load order support and works with game version 1.2.3
     validations:
-      required: true
-  - type: dropdown
-    id: version
-    attributes:
-      label: Version
-      description: What version of our software are you running?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-      default: 0
-    validations:
-      required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
+      required: false
+
+
   - type: checkboxes
-    id: terms
+    id: confirmation
     attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com). 
+      label: Confirmation
+      description: Please double-check that all links above are accurate, working and that a check for any existing game extensions has been completed.  
       options:
-        - label: I agree to follow this project's Code of Conduct
+        - label: I confirm the above is accurate
+          required: true     
+
+  - type: checkboxes
+    id: packaging
+    attributes:
+      label: Packaging
+      description: For more information, please see [How to package a game extension](https://example.com)
+      options:
+        - label: This extension is packaged correctly
+          required: true    
+
+  - type: checkboxes
+    id: testing
+    attributes:
+      label: Testing
+      description: For more information, please see [How to test a game extension](https://example.com)  
+      options:
+        - label: This game extension has been tested
           required: true
