--- a/.github/workflows/update-extensions-manifest.yml
+++ b/.github/workflows/update-extensions-manifest.yml
@@ -7,6 +7,11 @@ name: Update Extensions Manifest
 on:
   workflow_dispatch:
     inputs:
+      bundled-games-only:
+        description: "Bundled games only?"
+        required: true
+        type: boolean
+        default: false  
       dry-run:
         description: "Dry run?"
         required: true
@@ -25,6 +30,7 @@ jobs:
     
     env:
       DRY_RUN: ${{ !!(inputs.dry-run) }}
+      BUNDLED_GAMES_ONLY: ${{ !!(inputs.bundled-games-only) }}
       NEXUS_APIKEY: ${{ secrets.NEXUS_APIKEY }}
       SLACK_SIGNING_SECRET: ${{ secrets.SLACK_SIGNING_SECRET }}
       SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
