--- a/.github/workflows/update-issue-tracker.yml
+++ b/.github/workflows/update-issue-tracker.yml
@@ -4,6 +4,7 @@ name: Daily Open and Closed Issues Check
 on:
   schedule:
     - cron: "0 0 * * *"  # Runs daily at midnight UTC
+    workflow_dispatch:  # Allows the workflow to be run manually
 
 jobs:
   fetch_issues:
