--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "dev": "ts-node-dev --exit-child src/index.ts",
     "update-extensions-manifest": "ts-node src/update-extensions-manifest.ts",
     "add-extension": "ts-node src/add-extension.ts",
-    "add-mods-of-month": "ts-node src/add-mods-of-month.ts",
+    "add-mod-spotlights-video": "ts-node src/add-mod-spotlights-video.ts",
     "test-slack": "ts-node src/test-slack.ts",
     "test-github": "ts-node src/test-github.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
