--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@babel/parser": "^7.22.5",
     "@babel/traverse": "^7.22.5",
-    "@nexusmods/nexus-api": "^1.1.5",
+    "@nexusmods/nexus-api": "Nexus-Mods/node-nexus-api",
     "@slack/bolt": "^3.13.3",
     "@tsdotnet/stopwatch": "^1.0.13",
     "acorn": "^8.9.0",
