adding ability to publish multiple game extensions in one go

--- a/package.json
+++ b/package.json
@@ -92,6 +92,9 @@
     "update-extensions-manifest": "ts-node src/update-extensions-manifest.ts",
     "add-extension": "ts-node src/add-extension.ts",
     "add-mod-spotlights-video": "ts-node src/add-mod-spotlights-video.ts",
+    "read-extension-review-requests": "ts-node src/read-extension-review-requests.ts",
+    "process-review-requests": "ts-node src/process-review-requests.ts",
+    "publish-extensions": "ts-node src/publish-extensions.ts",
     "test-slack": "ts-node src/test-slack.ts",
     "test-github": "ts-node src/test-github.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
